Fix gene panel horizontal overflow when more than 4 evidence entries are present

--- a/src/components/genes-panel/genes-panel.scss
+++ b/src/components/genes-panel/genes-panel.scss
@@ -121,8 +121,8 @@
 .node-term {
   font-size: 0.75em;
   flex-grow: 1;
+  flex-shrink: 1;
 }
 
 .node-evidence {
-  @include deep-width(2em);
 }
